# Spine-Agent

./: .dockerignore  .env.example  .gitignore  .mcp.json  AGENT_MODES_AND_GATES.md  Dockerfile  HACKATHON_EXECUTION_BACKLOG.md  MVP_SCOPE_AND_ROOT_OBJECT.md  PROMPT_db_config_periodic_collector.md  PROMPT_db_config_report_skill.md  README.md  SKILL_SCHEMA_AND_REGISTRY.md  Telegram integration  docker-compose.yml  operational_spine_agent_project_plan.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
AdventureWorks-for-Postgres/: REPORT.md  SPINE_DETECTION.md  analyze.py  db.md  docker-compose.yml  report.py  results.json
AdventureWorks-for-Postgres/Agent_Arq/: Backends.md  Deep_Agents_Overview.md  Human_In_The_Loop.md  Long_Term_Memory.md  Models.md  Overview.md  SPINE_ANALYSIS.md  Sandboxes.md  Skills.md  Streaming.md  Subagents.md  URL.md
AdventureWorks-for-Postgres/agent/: AGENTS.md  agent.py  requirements.txt  tools.py
AdventureWorks-for-Postgres/wiki/: business-metrics.md  data-quality.md  (+10 more)
agent/: AGENTS.md  approval_gate.py  aw_agent.py  config.py  context_store.py  core.py  db.py  embeddings.py  executor.py  planner.py  router.py  skills_file.py  spine.py  tools.py
analyze_company_config/: code.py  spec.yaml
config/: providers.yaml
db/: schema.sql
interfaces/: cli.py  telegram_bot.py
monitor/: alerts.py  rules.py  scheduler.py
scripts/: load_adventureworks.sh  verify_setup.py
skills/: base_skill.py  registry.py
tests/: test_context_store.py  test_skills.py  test_spine.py
wiki/: company-overview.md  db-fk-graph.md  db-sales.md
(+35 files in other folders)
