[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spine-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*", "skills*", "mcp_servers*", "monitor*", "interfaces*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Disable ROS plugins that interfere from system site-packages
addopts = "-p no:launch-testing-ros -p no:ament-flake8 -p no:ament-xmllint -p no:ament-lint -p no:ament-pep257 -p no:ament-copyright -p no:launch_testing"
